...
                        text.value = ""
                    }
                ),
                keyboardOptions = KeyboardOptions.Default.copy(
                    imeAction = ImeAction.Send
                ),
                modifier = Modifier.testTag("comment_post_text_field")
            )
            if (text.value.isBlank()) {
                Text(
                    text = "Add a comment...",
                    style = MaterialTheme.typography.body1,
                    color = Color.Gray,
...
