...
                verticalAlignment = Alignment.CenterVertically
            ) {
                IconButton(onClick = onLike) {
                    Icon(
                        imageVector = if (post.isLiked) Icons.Rounded.Favorite
                        else Icons.Rounded.FavoriteBorder,
                        contentDescription = "Like Post"
                    )
                }
                Spacer(modifier = Modifier.width(spacing.small))
                Text(text = post.likes.toString(), style = MaterialTheme.typography.h4)
            }
            Spacer(modifier = Modifier.width(spacing.medium))
...
